2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in the 'DEVICE OPTIONS' section of
	'docs/glassplayer.xml'.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that caused xruns.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--meter-data' switch	to glassplayer(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Added level meters to glassplayergui(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for the '--meter-data' switch for JACK
	devices.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/glassplayer.cpp' that caused
	invalid meter levels to be emitted.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metadata updates for JACK devices.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that threw segfaults
	when recovering from a dropped server connection.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'glassplayer/dev_jack.cpp' and
	'glassplayer/dev_jack.h' that broke the build on RHEL 6.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.6.
2016-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'audio/x-mpeg' mimetype to the Codec::TypeMpeg1 codec
	in 'src/common/codec.cpp'.
	* Implemented a '--post-data=' parameter in glassplayer(1).
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented authentication support for Shoutcast and Icecast
	servers in 'src/glassplayer/conn_xcast.cpp'.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented authentication support for HLS servers in
	'src/glassplayer/conn_hls.cpp'.
2016-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed debugging printf from 'src/glassplayer/conn_xcast.cpp'.
2016-11-23 Fred Gleason <fredg@paravelsystems.com>
	* Renamed Codec::Vorbis to Codec::Ogg in 'src/common/codec.h'.