@@ -34,6 +34,7 @@ dist_glassplayer_SOURCES = audiodevicefactory.cpp audiodevicefactory.h\
                            codec_fdk.cpp codec_fdk.h\
                            codec_mpeg1.cpp codec_mpeg1.h\
                            codec_null.cpp codec_null.h\
+                           codec_ogg.cpp codec_ogg.h\
                            codec_pass.cpp codec_pass.h\
                            codecfactory.cpp codecfactory.h\
                            conn_file.cpp conn_file.h\
@@ -61,6 +62,7 @@ nodist_glassplayer_SOURCES = audiodevice.cpp audiodevice.h\
                              moc_codec_fdk.cpp\
                              moc_codec_mpeg1.cpp\
                              moc_codec_null.cpp\
+                             moc_codec_ogg.cpp\
                              moc_codec_pass.cpp\
                              moc_conn_file.cpp\
                              moc_conn_hls.cpp\
@@ -74,7 +76,7 @@ nodist_glassplayer_SOURCES = audiodevice.cpp audiodevice.h\
                              moc_serverid.cpp\
                              ringbuffer.cpp ringbuffer.h
 
-glassplayer_LDADD = @SIRLIBS@ @LIBJACK@ @SNDFILE_LIBS@ @ALSA_LIBS@ @ASIHPI_LIBS@ -lpthread
+glassplayer_LDADD = @SIRLIBS@ @LIBJACK@ @SNDFILE_LIBS@ @ALSA_LIBS@ @ASIHPI_LIBS@ -lpthread -logg -lvorbis
 glassplayer_LDFLAGS = @SIRFLAGS@
 
 CLEANFILES = *~\
